Go to frontapage after rejecting changes in publication form.

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -1835,8 +1835,8 @@
   <div class="col-md-3 margin-bottom-md">
     <button class="btn btn-danger btn-lg btn-block"
             type="reset"
-            data-ng-click="cancelAndGoToPublicationListing()">
-      Hylkää
+            data-ng-click="cancelAndAndStartOver()">
+      Hylkää muutokset
     </button>
   </div>
   <div class="col-md-6">
