--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -140,8 +140,6 @@
       <div class="row">
         <div class="col-xs-12">
           <tags-input
-                      role="input"
-                      aria-labelledby="julkaisuntekijat"
                       data-ng-model="tekijatTags"
                       data-replace-spaces-with-dashes="false"
                       data-add-on-comma="false"
@@ -221,7 +219,6 @@
     <div class="col-xs-12 col-sm-5">
       <ui-select data-ng-model="alayksikkovuosi.selected"
                  role="listbox"
-                 aria-labelledby="vuosivalinta"
                  theme="bootstrap">
         <ui-select-match class="ui-select-match"
                          data-ng-value="alayksikkovuosi.selected"
@@ -229,6 +226,7 @@
           {{ $select.selected.label }}
         </ui-select-match>
         <ui-select-choices
+                aria-labelledby="vuosivalinta"
                 repeat="ala in alayksikkovuodet"
                 role="option">
           {{ala.label}}
@@ -296,7 +294,8 @@
                       data-ng-model="justus.organisaatiotekija[$index].orcid"
                       placeholder="{{i18n.content.form.organisaatiotekija.orcid.picktip[lang]}}"
                       data-ng-keydown="resetValidationError('orcid', $index)">
-              <span class="invalid-pattern text-secondary text-danger" aria-hidden="true">Tarkasta ORCID -numeron muoto</span>
+              <span class="invalid-pattern text-secondary text-danger" aria-hidden="true"
+                    data-ng-bind="i18n.content.form.organisaatiotekija.orcid.virhe[lang]"></span>
             </div>
             <!-- Kenttä hr numero, currently visible only for Luonnonvarakeskus -->
             <div data-ng-if="isFieldVisible('hrnumero')" id="hrGroup" class="col-xs-12 col-sm-6 form-group">
@@ -587,8 +586,8 @@
             </div>
           </div>
         </div>
-        <span class="invalid-pattern text-secondary text-danger" aria-hidden="true">
-          Annettu ISBN on väärässä muodossa</span>
+        <span class="invalid-pattern text-secondary text-danger" aria-hidden="true"
+              data-ng-bind="i18n.content.form.isbn.virhe[lang]"></span>
       </div>
 
     </div>
@@ -747,8 +746,8 @@
           </div>
         </div>
        <!--  ota tämä group ja resetoi -->
-        <span class="invalid-pattern text-secondary text-danger" aria-hidden="true">
-          Annettu ISSN on väärässä muodossa</span>
+        <span class="invalid-pattern text-secondary text-danger" aria-hidden="true"
+              data-ng-bind="i18n.content.form.issn.virhe[lang]"></span>
       </div>
     </div>
 
@@ -998,7 +997,6 @@
        </div>
        <div class="col-sm-8 col-xs-12 justus-data">
          <tags-input
-                 aria-labelledby="avainsanat"
                  data-ng-model="avainsanatTags"
                  data-replace-spaces-with-dashes="false"
                  data-add-on-comma="true"
@@ -1043,8 +1041,8 @@
        <div class="col-sm-8 col-xs-12 justus-data">
          <div class="row">
            <div class="col-xs-10">
-               <ui-select aria-labelledby="julkaisunkieli"
-                       data-ng-model="julkaisunkieli.selected"
+               <ui-select
+                          data-ng-model="julkaisunkieli.selected"
                           data-ng-class="{ 'strong-placeholder': justus.julkaisu.julkaisunkieli }"
                           on-select="useField('julkaisu', 'julkaisunkieli', $select.selected.arvo.toLowerCase())"
                           theme="bootstrap">
@@ -1052,9 +1050,11 @@
                                   placeholder="{{getSelite(codes.kieli, justus.julkaisu.julkaisunkieli.toUpperCase()) || i18n.content.form.julkaisunkieli.picktip[lang]}}">
                    {{ $select.selected.selite }}
                  </ui-select-match>
-                 <ui-select-choices role="option"
+                 <ui-select-choices
+                         aria-labelledby="julkaisunkieli"
+                         role="option"
                          repeat="o in codes['kieli'] | orderBy: 'selite' | filter: $select.search"
-                                    ui-disable-choice="o.nogo">
+                         ui-disable-choice="o.nogo">
                     {{o.selite }}
                  </ui-select-choices>
                </ui-select>
@@ -1137,18 +1137,20 @@
        <div class="col-sm-8 col-xs-12 justus-data">
          <div class="row">
            <div class="col-xs-10">
-             <ui-select aria-labelledby="julkaisumaa"
-                        data-ng-model="julkaisumaa.selected"
-                        data-ng-class="{ 'strong-placeholder': justus.julkaisu.julkaisumaa }"
-                        on-select="useField('julkaisu', 'julkaisumaa', $select.selected.arvo)"
-                        theme="bootstrap">
+             <ui-select
+                     data-ng-model="julkaisumaa.selected"
+                     data-ng-class="{ 'strong-placeholder': justus.julkaisu.julkaisumaa }"
+                     on-select="useField('julkaisu', 'julkaisumaa', $select.selected.arvo)"
+                     theme="bootstrap">
                <ui-select-match class="ui-select-match"
                                 placeholder="{{getSelite(codes.maatjavaltiot2, justus.julkaisu.julkaisumaa) || i18n.content.form.julkaisumaa.picktip[lang]}}">
                  {{ $select.selected.selite }}
                </ui-select-match>
-               <ui-select-choices role="option"
-                                  repeat="o in codes['maatjavaltiot2'] | orderBy: 'selite' | filter: $select.search"
-                                  ui-disable-choice="o.nogo">
+               <ui-select-choices
+                       aria-labelledby="julkaisumaa"
+                       role="option"
+                       repeat="o in codes['maatjavaltiot2'] | orderBy: 'selite' | filter: $select.search"
+                       ui-disable-choice="o.nogo">
                  {{o.arvo }} {{o.selite }}
                </ui-select-choices>
              </ui-select>
@@ -1260,27 +1262,19 @@
        <div class="col-sm-8 col-xs-12 justus-data">
          <div data-ng-repeat="i in justus.tieteenala track by $index"
               class="row">
-           <div class="col-xs-10">
+           <div class="col-xs-8">
              <div class="form-group">
-               <input
-                       id="tieteenala"
-                       name="tieteenala"
-                       type="text"
-                       data-ng-disabled="true"
-                       class="form-control"
-                       data-ng-model="lab_tieteenala$index"
-                       data-ng-value="i.tieteenalakoodi+' '+getSelite(codes.tieteenalat, i.tieteenalakoodi)">
-<!--               <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>-->
+               <span class="text-secondary font-weight-bold text-xl" data-ng-bind="$index+1 + '. ' + i.tieteenalakoodi+' '+getSelite(codes.tieteenalat, i.tieteenalakoodi)"></span>
              </div>
            </div>
-           <div class="col-xs-2">
-             <button type="button"
-                     class="btn btn-danger m-b"
-                     data-ng-click="justus.tieteenala.splice($index, 1)"
-                     data-ng-if="justus.tieteenala.length >= 2 && (justus.tieteenala.length - 1) !== $index"
-                     title="{{i18n.content.form.tieteenala.poista.tooltip[lang]}}"
-                     data-ng-bind="i18n.content.form.tieteenala.poista.tooltip[lang]">
-             </button>
+           <div class="col-xs-4">
+             <a id="tieteenala"
+                data-ng-click="justus.tieteenala.splice($index, 1)"
+                class="text-danger cursor-pointer text-secondary"
+                title="{{i18n.content.form.tieteenala.poista.tooltip[lang]}}">
+                  {{i18n.content.form.tieteenala.poista.tooltip[lang]}}
+               <i class="fa fa-close" aria-hidden="true"></i>
+             </a>
            </div>
          </div>
          <div class="row">
@@ -1367,27 +1361,22 @@
          <span data-ng-if="isFieldRequired('taiteenala')" class="sr-only">Required field</span>
        </div>
        <div class="col-xs-10 col-sm-8 justus-data">
-         <div data-ng-repeat="i in justus.taiteenala track by $index" class="row">
-           <div class="col-xs-10">
+
+         <div data-ng-repeat="i in justus.taiteenala track by $index"
+              class="row">
+           <div class="col-xs-8">
              <div class="form-group">
-               <input
-                       id="taiteenala"
-                       name="taiteenala"
-                       type="text"
-                       data-ng-disabled="true"
-                       class="form-control"
-                       data-ng-model="lab_taiteenala$index"
-                       data-ng-value="i.taiteenalakoodi+' '+getSelite(codes.taiteenalat, i.taiteenalakoodi)">
+               <span class="text-secondary font-weight-bold text-xl" data-ng-bind="$index+1 + '. ' + i.taiteenalakoodi+' '+getSelite(codes.taiteenalat, i.taiteenalakoodi)"></span>
              </div>
            </div>
-           <div class="col-xs-2">
-             <button type="button"
-                     class="btn btn-danger m-b"
-                     data-ng-click="justus.taiteenala.splice($index, 1)"
-                     data-ng-if="justus.taiteenala.length >= 2 && (justus.taiteenala.length - 1) !== $index"
-                     title="{{i18n.content.form.taiteenala.poista.tooltip[lang]}}"
-                     data-ng-bind="i18n.content.form.taiteenala.poista.tooltip[lang]">
-             </button>
+           <div class="col-xs-4">
+             <a id="taiteenala"
+                data-ng-click="justus.taiteenala.splice($index, 1)"
+                class="text-danger cursor-pointer text-secondary"
+                title="{{i18n.content.form.taiteenala.poista.tooltip[lang]}}">
+               {{i18n.content.form.taiteenala.poista.tooltip[lang]}}
+               <i class="fa fa-close" aria-hidden="true"></i>
+             </a>
            </div>
          </div>
          <div class="row">
@@ -1435,25 +1424,22 @@
          <span data-ng-if="isFieldRequired('taidealantyyppikategoria')" class="sr-only">Required field</span>
        </div>
        <div class="col-xs-10 col-sm-8 justus-data">
-         <div data-ng-repeat="i in justus.taidealantyyppikategoria" class="row">
-           <div class="col-xs-10">
+
+         <div data-ng-repeat="i in justus.taidealantyyppikategoria track by $index"
+              class="row">
+           <div class="col-xs-8">
              <div class="form-group">
-               <input id="taidealantyyppikategoria"
-                      name="taidealantyyppikategoria"
-                      type="text" data-ng-disabled="true"
-                      class="form-control"
-                      data-ng-model="lab_taidealantyyppikategoria$index"
-                      data-ng-value="i +' '+getSelite(codes.taidealantyypit ,i)">
+               <span class="text-secondary font-weight-bold text-xl" data-ng-bind="$index+1 + '. ' + i + ' ' +getSelite(codes.taidealantyypit, i)"></span>
              </div>
            </div>
-           <div class="col-xs-2">
-             <button
-                     type="button"
-                     class="btn btn-danger m-b"
-                     data-ng-click="justus.taidealantyyppikategoria.splice($index, 1)"
-                     title="{{i18n.content.form.taidealantyyppikategoria.poista.tooltip[lang]}}"
-                     data-ng-bind="i18n.content.form.taidealantyyppikategoria.poista.tooltip[lang]">
-             </button>
+           <div class="col-xs-4">
+             <a id="taidealantyyppikategoria"
+                data-ng-click="justus.taidealantyyppikategoria.splice($index, 1)"
+                class="text-danger cursor-pointer text-secondary"
+                title="{{i18n.content.form.taidealantyyppikategoria.poista.tooltip[lang]}}">
+               {{i18n.content.form.taidealantyyppikategoria.poista.tooltip[lang]}}
+               <i class="fa fa-close" aria-hidden="true"></i>
+             </a>
            </div>
          </div>
          <div class="row">
@@ -1708,6 +1694,7 @@
             data-ng-required="requiredHighlight && !isValid('avoinsaatavuus')">
          <div class="row">
            <div class="col-xs-10">
+             <div>
              <input id="eiavoinsaatavuutta"
                     name="eiavoinsaatavuutta"
                     type="radio"
@@ -1719,7 +1706,8 @@
                     class="control-label">
                {{i18n.content.form.avoinsaatavuus['0'][lang]}}
              </label>
-             <br>
+             </div>
+             <div>
              <input id="openaccess"
                     name="openaccess"
                     type="radio"
@@ -1737,7 +1725,8 @@
                   data-ng-show="i18n.content.form.avoinsaatavuus['1'].tooltip[lang]">
                </i>
              </label>
-             <br>
+             </div>
+           <div>
              <input id="hybridijulkaisu"
                     name="hybridijulkaisu"
                     type="radio"
@@ -1755,6 +1744,7 @@
                   data-ng-show="i18n.content.form.avoinsaatavuus['2'].tooltip[lang]">
                </i>
              </label>
+           </div>
            </div>
          </div>
        </div>
