Minor style changes.

--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -58,6 +58,7 @@ $padding-xs-vertical: 1px;
 $padding-xs-horizontal: 5px;
 
 $border-radius-base: 2px;
+$border-radius-lg: 3px;
 
 // Typography
 $font-size-base: 14px;
