--- a/src/app/scss/components/_button.scss
+++ b/src/app/scss/components/_button.scss
@@ -25,11 +25,12 @@
 }
 
 .btn-lg {
-  padding-left: $padding-large-vertical*2;
-  padding-right: $padding-large-vertical*2;
+  padding-left: $padding-large-vertical;
+  padding-right: $padding-large-vertical;
   padding-top: 20px;
   padding-bottom: 20px;
   font-weight: 300;
+  border-radius: $border-radius-lg;
 }
 
 .btn-sm {
@@ -85,7 +86,7 @@
 }
 
 .justus-btn-stage {
-  background-color: lighten($brand-secondary, 30%);
+  background-color: lighten($brand-secondary, 20%);
   color: $brand-white;
   font-size: 18px;
   padding: 20px 10px;
@@ -94,7 +95,7 @@
 }
 
 .justus-btn-stage.disabled {
-  background-color: lighten($brand-secondary, 30%);
+  background-color: lighten($brand-secondary, 20%);
   padding: 20px 10px;
   margin: 2px;
 }
