--- a/src/app/html/footer.html
+++ b/src/app/html/footer.html
@@ -8,7 +8,7 @@
         <div class="row p-1">
             <div class="col-md-6 col-xs-12 text-center">
                 <div class="d-inline-block text-left">
-                    <p class="text-xl font-weight-bold text-secondary">Sivukartta:</p>
+                    <p class="text-xl font-weight-bold text-secondary">{{i18n.footer.sivukartta[lang]}}:</p>
                     <nav aria-label="secondary-nav">
                         <ul class="list-style-none text-xl">
                             <li>
@@ -91,19 +91,19 @@
                 <div class="text-left d-inline-block" style="padding-top:17%;">
                     <p class="text-xl">
                         <a class="link-white" href="https://wiki.eduuni.fi/display/CscJustus/Ohjeet" target="__blank">
-                            Palvelun ohjeet
+                            {{i18n.footer.ohjeet[lang]}}
                             <i class="fa fa-external-link pl-x"></i>
                         </a>
                     </p>
                     <p class="text-xl">
-                        <a class="link-white" href="https://wiki.eduuni.fi/display/CscJustus/Ohjeet" target="__blank">
-                            Saavutettavuusseloste
+                        <a class="link-white" href="https://wiki.eduuni.fi/display/CscJustus/Saavutettavuusseloste" target="__blank">
+                            {{i18n.footer.saavutettavuusseloste[lang]}}
                             <i class="fa fa-external-link pl-x"></i>
                         </a>
                     </p>
                     <p class="text-xl">
-                        <a class="link-white" href="https://wiki.eduuni.fi/display/CscJustus/Ohjeet" target="__blank">
-                            Tietosuoja
+                        <a class="link-white" href="https://wiki.eduuni.fi/pages/viewpage.action?pageId=30310801" target="__blank">
+                            {{i18n.footer.tietosuoja[lang]}}
                             <i class="fa fa-external-link pl-x"></i>
                         </a>
                     </p>
@@ -115,9 +115,9 @@
     <div class="row">
         <div class="col-xs-12 text-center text-secondary">
             <hr data-ng-if="state.name!=='index'" style="width:80%"/>
-            <div class="text-xl font-weight-bold">Palvelun tarjoaa:</div>
+            <div class="text-xl font-weight-bold" data-ng-bind="i18n.footer.palveluntarjoaa[lang]"></div>
             <div class="p-1">
-                <img src="img/cscnega.png" alt="CSC logo" class="" style="max-height:50px">
+                <img src="img/cscnega.png" alt="CSC logo" style="max-height:50px">
             </div>
             <div>
                 <p>
